--- a/foundations/block-and-inline/02-margin-and-padding-2/index.html
+++ b/foundations/block-and-inline/02-margin-and-padding-2/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Margin and Padding exercise 2</title>
     <link rel="stylesheet" href="style.css">
-  </head>
+  </head>S
   <body>
     <div class="card">
       <h1 class="title">I'm a card</h1>
