--- a/foundations/flex/04-flex-information/index.html
+++ b/foundations/flex/04-flex-information/index.html
@@ -7,20 +7,34 @@
     <title>Information</title>
     <link rel="stylesheet" href="style.css">
   </head>
+
   <body>
-    <div class="title">Information!</div>
+    <section class="header">
+       <div class="title">Information!</div>
+    </section>
 
-    <img src="./images/barberry.png" alt="barberry">
-    <div class="text">This is a type of plant. We love this one.</div>
+    <section class="plant">
+      <div class="barberry">
+      <img src="./images/barberry.png" alt="barberry">
+      <div class="text">This is a type of plant. We love this one.</div>
+    </div>
 
-    <img src="./images/chilli.png" alt="chili">
-    <div class="text">This is another type of plant. Isn't it nice?</div>
+    <div class="chilli">
+      <img src="./images/chilli.png" alt="chili">
+      <div class="text">This is another type of plant. Isn't it nice?</div>
+    </div>
 
-    <img src="./images/pepper.png" alt="pepper">
-    <div class="text">We have so many plants. Yay plants.</div>
-
-    <img src="./images/saffron.png" alt="saffron">
+    <div class="pepper">
+      <img src="./images/pepper.png" alt="pepper">
+      <div class="text">We have so many plants. Yay plants.</div>
+    </div>
+    
+    <div class="saffron">
+      <img src="./images/saffron.png" alt="saffron">
     <div class="text">I'm running out of things to say about plants.</div>
+    </div>
+
+    </section>
 
     <!-- disregard this section, it's here to give attribution to the creator of these icons -->
     <div class="footer">
